{
    "name": "GameplayActionMap",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "51809d25-a1b7-48b5-9cb2-31ebd67de749",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "3409d4a4-29e6-4e6e-b2fa-429821e5aa84",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WSAD",
                    "id": "9acd6055-eb9f-490d-8e6e-bd950215a56f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e3dccdd3-6679-4546-80a0-6c9cef7683a0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "cd72f89e-face-4164-bed3-83fcd0172849",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b60a9490-3f9a-4810-814a-00efb7b36bcc",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "98ab13a5-e1ea-4e76-b551-23b937de23f3",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6df7bc10-d56a-48ea-935c-2f39b4d70f5a",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xinput",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerAttack",
            "id": "f3a12932-58ef-459a-9281-94b9eb83c546",
            "actions": [
                {
                    "name": "ActivateSkill",
                    "type": "Button",
                    "id": "90c74130-88f9-4c4e-9f3e-87a285562b12",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": []
        },
        {
            "name": "DeviceHandler",
            "id": "71968d3e-bd99-4fa9-bdda-045978489d94",
            "actions": [
                {
                    "name": "JoinGame",
                    "type": "Button",
                    "id": "7b4102cc-7b4b-46ae-9c45-8a6c3221f8f6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2da0f793-99f3-470f-8278-26381d7dc9a7",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xinput",
                    "action": "JoinGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73141d7a-3e95-4862-b6e9-6a8a4097865e",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "JoinGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KBM",
            "bindingGroup": "KBM",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Xinput",
            "bindingGroup": "Xinput",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}